[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/game/field/construction/constructor/icon.png" type="Texture" id=1]
[ext_resource path="res://scenes/game/field/construction/constructor/Constructor.gd" type="Script" id=2]
[ext_resource path="res://ui/fonts/Font.tres" type="DynamicFont" id=3]

[node name="constructor" type="Node2D"]
script = ExtResource( 2 )

[node name="icon" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="selector_ui" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="electricity_generation" type="HBoxContainer" parent="selector_ui"]
margin_right = 264.0
margin_bottom = 43.0

[node name="margin" type="MarginContainer" parent="selector_ui/electricity_generation"]
margin_right = 220.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="label" type="Label" parent="selector_ui/electricity_generation/margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 210.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 3 )
text = "electricity production"

[node name="margin2" type="MarginContainer" parent="selector_ui/electricity_generation"]
margin_left = 224.0
margin_right = 264.0
margin_bottom = 43.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="value" type="Label" parent="selector_ui/electricity_generation/margin2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 30.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 3 )
text = "10"

[node name="electricity_storage" type="HBoxContainer" parent="selector_ui"]
margin_top = 48.0
margin_right = 264.0
margin_bottom = 91.0

[node name="margin" type="MarginContainer" parent="selector_ui/electricity_storage"]
margin_right = 207.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="label" type="Label" parent="selector_ui/electricity_storage/margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 197.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 3 )
text = "electricity storage"

[node name="margin2" type="MarginContainer" parent="selector_ui/electricity_storage"]
margin_left = 211.0
margin_right = 264.0
margin_bottom = 43.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="value" type="Label" parent="selector_ui/electricity_storage/margin2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 43.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 3 )
text = "100"

[node name="electricity" type="HBoxContainer" parent="selector_ui"]
margin_top = 96.0
margin_right = 264.0
margin_bottom = 139.0

[node name="margin" type="MarginContainer" parent="selector_ui/electricity"]
margin_right = 240.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="label" type="Label" parent="selector_ui/electricity/margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 230.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 3 )
text = "current electricity"

[node name="margin2" type="MarginContainer" parent="selector_ui/electricity"]
margin_left = 244.0
margin_right = 264.0
margin_bottom = 43.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="value" type="Label" parent="selector_ui/electricity/margin2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 10.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 3 )

[node name="construction_bots" type="HBoxContainer" parent="selector_ui"]
margin_top = 144.0
margin_right = 264.0
margin_bottom = 187.0

[node name="margin" type="MarginContainer" parent="selector_ui/construction_bots"]
margin_right = 240.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="label" type="Label" parent="selector_ui/construction_bots/margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 230.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 3 )
text = "construction bots"

[node name="margin2" type="MarginContainer" parent="selector_ui/construction_bots"]
margin_left = 244.0
margin_right = 264.0
margin_bottom = 43.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="value" type="Label" parent="selector_ui/construction_bots/margin2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 10.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 3 )

[node name="iron" type="HBoxContainer" parent="selector_ui"]
margin_top = 144.0
margin_right = 264.0
margin_bottom = 187.0

[node name="margin" type="MarginContainer" parent="selector_ui/iron"]
margin_right = 240.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="label" type="Label" parent="selector_ui/iron/margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 230.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 3 )
text = "iron"

[node name="margin2" type="MarginContainer" parent="selector_ui/iron"]
margin_left = 244.0
margin_right = 264.0
margin_bottom = 43.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="value" type="Label" parent="selector_ui/iron/margin2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 10.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 3 )

[node name="production_timer" type="Timer" parent="."]
autostart = true
[connection signal="timeout" from="production_timer" to="." method="_on_production_timer_timeout"]
